Fix Java 5 dependency.
git-svn-id: http://argouml.tigris.org/svn/argouml/trunk/src_new@11367 a161b567-7d1e-0410-9ef9-912c70fedb3f